# cepy-tools

./: LICENSE  README.md  cepy.py  pyproject.toml  study_plan.py
.github/workflows/: publish-to-pypi.yml
data/: pinyin-exceptions.txt  pinyin-table.csv
src/cepy/: cepy.py  pinyin.py  serialize.py  word_segmentation.py
src/cepy_tools/: __init__.py  cepy.py  pinyin.py  serialize.py  word_segmentation.py
tests/: test_cepy.py  test_dict.txt  test_pinyin.py  test_serialize.py  test_word_segmentation.py
