[project]
name = "cepy-tools"
version = "0.1.0"
description = "A sleepy little collection of chinese<->english tools"
readme = "README.md"
authors = [
    { name = "Erik Swanson", email = "theerikswanson@gmail.com" }
]
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
dependencies = [
    "cepy-dict>=2025.2.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
